--- a/src/main/webapp/resources/css/reset.css
+++ b/src/main/webapp/resources/css/reset.css
@@ -24,7 +24,7 @@ body {
 }
 
 article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav {
+footer,header,hgroup,menu,nav,section {
     display:block;
 }
 
@@ -97,38 +97,35 @@ div {
 	backgound-color: #FFFFFF;
 }
 
-/*
-	배경 #F5F6F7
-	버튼 #BADFC4
-	선택 #63B47B
-	추가 rgb(233, 233, 233)
-	폰트 #FFFFFF OR rgb(70, 70, 70)
-*/
-
-
-/* 폰트 초기화 */
+/* 폰트 설정 */
 body, input, textarea, select, option, button, table {
 	font-family: 'NanumSquareRound';
+	/* 
+	font-family: 'NanumSquareRoundLight';
+	font-family: 'NanumSquareRound';		** 사용중 font-weight: 700
+	font-family: 'NanumSquareRoundBold';
+	font-family: 'NanumSquareRoundExtraBold';
+	*/
 	font-weight: 700;
 	color: rgb(70, 70, 70);
 }
 
-/* 
-<link rel="stylesheet" type="text/css" href="${contextPath}/resources/css/reset.css">
-<link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-round.css" rel="stylesheet">
-css 초기화문과 jsp(html)파일에 적용할 웹폰트 링크 태그를 넣습니다.
-위 폰트는 나눔스퀘어라운드
-폰트를 적용하려면 font-family를 적용하면 됨.
-font-family: 'NanumSquareRoundLight';
-font-family: 'NanumSquareRound';		** 사용중 font-weight: 700
-font-family: 'NanumSquareRoundBold';
-font-family: 'NanumSquareRoundExtraBold';
+/*
+	이 reset.css 파일을 다른 css파일에 적용하려면, 맨 윗줄에 넣기
+	@import "reset.css";
 
-웹폰트 링크 태그를 작업하는 jsp(html)파일에 작성하고, 그 아래에 reset.css 파일을 external 방식으로 적용하거나,
-reset.css 파일을 import한 본인의 css 파일을 그 아래에 external 방식으로 적용하면 폰트도 적용이 됩니다.
+	1. header.jsp에 적용한 reset.css 때문에 각자 페이지에서 css 작업을 할 때 반영이 안 되는 현상이 나타남.
+	2. header.jsp에 reset.css 적용시키면 안 됩니다.
+	3. 웹 폰트 링크 태그와 reset.css파일을 자신이 작업하는 페이지에 적용합니다.
+	<link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-round.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../resources/css/reset.css">
 
 
-이 reset.css 파일을 css 폴더에 위치한 자신의 css파일에 적용하려면, 맨 윗줄에
-@import "reset.css";
-넣으면 됩니다.
+	*색상*
+	배경 #F5F6F7
+	버튼 #2C3E50
+	선택 #2C3E50; opacity: 0.65;
+	폰트 #F5F6F7
+	날씨 #8AAAE5
+
 */
